--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Continuous Benchmarking</title>
-    <meta name="description" content="A benchmark dashboard application designed for Julia projects" />
-    <link rel="icon" type="image/svg+xml" href="https://julialang.org/assets/infra/julia.ico" />
+    <meta
+      name="description"
+      content="A benchmark dashboard application designed for Julia projects"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://julialang.org/assets/infra/julia.ico"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="module" src="/index.tsx"></script>
   </head>
